src/test/deca/context/valid/conv_float_assigne_opentiere_6.deca
// Description :
// on déclare un float et on lui assigne une opération entière
//
// Résultats :
// ok

{
  float y;
  y = readInt();
}